@@ -1,6 +1,7 @@
 Revision history for Perl module Dist-Zilla-PluginBundle-Author-DOHERTY
 
 {{$NEXT}}
+    * Add support for specifying the changelog filename
 
 0.014     2011-02-18
     * Attempt to use Git::Commit and Git::Push properly
